logs/gnip-historical.log
Listing '.'...
Listing './bin'...
Compiling './bin/accept_job.py'...
***   File "./bin/accept_job.py", line 6
    print "Please provide a job URL. Use accept_job.py -h for more information."
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/create_job.py'...
***   File "./bin/create_job.py", line 13
    print "Please provide a job description file. Use create_job.py -h for more information."
                                                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/list_jobs.py'...
***   File "./bin/list_jobs.py", line 21
    print str(status)
            ^
SyntaxError: invalid syntax

Compiling './bin/reject_job.py'...
***   File "./bin/reject_job.py", line 6
    print "Please provide a job URL. Use reject_job.py -h for more information."
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gnip_historical'...
Compiling './lib/python3.5/site-packages/gnip_historical/gnip_historical.py'...
***   File "./lib/python3.5/site-packages/gnip_historical/gnip_historical.py", line 38
    if self.suspectMinuteURLs <> []:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gnip_historical/gnip_historical_job.py'...
***   File "./lib/python3.5/site-packages/gnip_historical/gnip_historical_job.py", line 37
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gnip_historical-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
